@@ -1,6 +1,8 @@
 v3.0.1
 - Add support for asynchronous connect. The addon will now regularly try to connect to the backend if it is not connected already.
 - Added support for the recording channelType property to distinguish between radio and tv recordings (requires TVServerKodi v1.15.0.136 or above)
+- Added a fallback for in-progress recording playback using the TSReader. When the filename is empty, try the RTSP url and vice versa.
+- OpenRecordedStream: send additional error messages to the log in case things fail here.
 
 v3.0.0
 - Initial Kodi v18 version
